updating theme default typography

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2,6 +2,8 @@
 
 @import "colors";
 @import "custom/colors";
+@import "typography";
+@import "custom/typography";
 @import "bootstrap";
 @import "bootstrap-responsive";
 @import "flat-ui";
